# matrizes-so

./: CMakeLists.txt  README.md  plot.gp  tempos_processos.txt  tempos_sequencial.txt  tempos_threads.txt
include/: auxiliar.hpp
scripts/: executar_programas_e1.sh  executar_programas_e2.sh  tempo_processos.sh  tempo_sequencial.sh  tempo_threads.sh
src/: auxiliar.cpp  gerador.cpp  processos.cpp  sequencial.cpp  threads.cpp
